Ignoring migrations and vsc lauch

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 __pycache__
 db.sqlite3
 media
+migrations
 
 # Backup files # 
 *.bak 
@@ -46,6 +47,7 @@ wheels/
 *.egg 
 *.manifest 
 *.spec 
+client/package-lock.json
 
 # Installer logs 
 pip-log.txt 
@@ -114,7 +116,7 @@ GitHub.sublime-settings
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
-
+launch.json
 
 */**/node_modules
 .DS_Store
