--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -22,7 +22,7 @@ mypy-extensions==0.4.3
 Naked==0.1.31
 oauthlib==3.1.1
 pathspec==0.8.1
-# psycopg2==2.9.1
+psycopg2==2.9.1
 pycparser==2.20
 PyJWT==2.1.0
 python-dotenv==0.18.0
